# scavenger_hunt

./: .gitignore  .gitmodules  README.md  application.php  export.bash  index.html  login.html  register.php  rules.html  scav.bash  scavenger_hunt.sql  style.css
absim/: README.md  absim_ros.py  agent.py  complexity.py  dynamic_agent.py  experiment.py  generate.py  greedy_agent.py  hunt.py  optimal_agent.py  (+6 more)
bwi_scavenger/: CMakeLists.txt  experiments  package.xml  perfect.cpp
bwi_scavenger/config/: bwi_scavenger.yaml
bwi_scavenger/include/bwi_scavenger/: cv_sweep.h  database_node.h  dbscan.h  dbscan_object.h  file_editor.h  global_topics.h  globals.h  kinect_fusion.h  mapping.h  move_node.h  object_cluster.h  path_planning.h  paths.h  robot_motion.h  state_machine.h  transfer_files.h  world_mapping.h
bwi_scavenger/launch/: bwi_scavenger.launch  do_hunt.launch  drivers.launch  drivers_sim.launch  find_object.launch  offboard.launch  remote.launch  scavenger.launch  scavenger_services.launch
bwi_scavenger/msg/: PerceptionMoment.msg  TaskProof.msg  proof.msg  scavenger_move.msg
bwi_scavenger/scripts/: absim_ros.py  absim_socket.py  agent.py  darknet_node.py  darknet_paths.py  darknet_structure.py  darknet_test_node.py  dbscan.py  dynamic_agent.py  generate.py  globals.py  hunt.py  listener.py  memory_node.py  objmem.py  paths.py  pathutil.py  robot_absim_services.py  scavenger_hunt.py  status_clustering.py  talker.py  util.py  world.py
bwi_scavenger/scripts/absim/: README.md  agent.py  bayesian_agent.py  dqn_16x16_agent.py  generate.py  hunt.py  optimal_agent.py  prob_agent.py  prob_prox_agent.py  prox_agent.py  salesman_agent.py  utest.py  util.py  world.py
bwi_scavenger/scripts/darksocket/: darksocket.conf  darksocket.py  darksocket_node.py  darksocket_ros_node.py
bwi_scavenger/scripts/state/: state.py  test.py
bwi_scavenger/scripts/templates/: darknet_launch_template.launch
bwi_scavenger/src/: Makefile  bag_to_mp4_test.cpp  client_test.cpp  clusterer_test.cpp  conclude_node.cpp  coor_point.cpp  cv_sweep.cpp  darknet_files_receive.cpp  darknet_files_send.cpp  database_node.cpp  dbscan.cpp  dbscan_object.cpp  do_hunt.cpp  file_editor.cpp  file_receive.cpp  file_send.cpp  find_object.cpp  find_object_node.cpp  go.cpp  go_home.cpp  kinect_fusion.cpp  kinect_test.cpp  main_node.cpp  mapping.cpp  memory_node.cpp  move_node.cpp  move_robot.cpp  multithread_test.cpp  object_cluster.cpp  occurrence_model_node.cpp  occurrence_model_services.cpp  path_planning.cpp  perception_node.cpp  pose_request_test.cpp  priority_test.cpp  proofs_xml_editor.cpp  ref_test.cpp  robot_motion.cpp  robot_motion_test.cpp  state_machine.cpp  (+7 more)
bwi_scavenger_msgs/: CMakeLists.txt  package.xml
bwi_scavenger_msgs/msg/: DarknetAddTrainingFile.msg  DarknetNetwork.msg  DarknetStartTraining.msg  DatabaseFile.msg  DatabaseInfo.msg  DatabaseProof.msg  MultitaskStart.msg  ObjectProbabilities.msg  ObjmemAdd.msg  ObjmemVerify.msg  OccurrenceModel.msg  PerceptionMoment.msg  RobotMove.msg  TaskEnd.msg  TaskStart.msg
bwi_scavenger_msgs/srv/: ConfirmObject.srv  DatabaseInfoSrv.srv  GetNextLocation.srv  GetOccurrenceModel.srv  GetPriorityPoints.srv  ObjmemDump.srv  PoseRequest.srv  SaveOccurrenceModel.srv  SaveWorld.srv  SendProof.srv
scavenger_hunt_api/scavenger_hunt_msgs/: CMakeLists.txt  package.xml
scavenger_hunt_api/scavenger_hunt_msgs/msg/: Proof.msg
scavenger_hunt_api/scavenger_hunt_msgs/srv/: GetProofStatus.srv  SendProof.srv
(+295 files in other folders)
